Fix over-blurring of text in Safari
 - Safari does not like fractions of pixels for blurring (maybe it's correct) and blurs more than other browsers do
 - Safari does not seem to like the 'q' unit but it is supported by Firefox, so the text remains unblurred in Safari this way

--- a/src/main/resources/furniture/blog.css
+++ b/src/main/resources/furniture/blog.css
@@ -15,7 +15,7 @@ body article {
 }
 
 body article, header, footer, h1, h2, h3, h4, h5, h6, p, nav, a {
-    filter: blur(0.25px);
+    filter: blur(0.1q);
 }
 
 header, footer, h1, h2, h3, h4, h5, h6 {
@@ -139,7 +139,7 @@ a:visited {
 
 img {
     max-width: 100%;
-    filter: blur(0.25px) contrast(3) saturate(4.1) grayscale(1.0) opacity(.75);
+    filter: blur(0.1q) contrast(3) saturate(4.1) grayscale(1.0) opacity(.75);
 }
 
 
